//package wanyou.game.protocol;
//请求好友信息(点击好友列表中好友面板时)
message BceFriendInfo {
    required string friendID = 1;      //id
}
