//package wanyou.game.protocol;
//∫√”—–≈œ¢

message FriendInfo {
}
